--- a/amazon_fine_food_kaggle.ipynb
+++ b/amazon_fine_food_kaggle.ipynb
@@ -2203,7 +2203,7 @@
         "    @classmethod\n",
         "    def metrics_table(self, metrics_dict):\n",
         "        '''\n",
-        "        Metrics Evalution table.\n",
+        "        Metrics evaluation table.\n",
         "        '''   \n",
         "        df = []\n",
         "        for key, value in metrics_dict.items():\n",
@@ -3894,7 +3894,7 @@
         "id": "nomB6hF6SV3z"
       },
       "source": [
-        "## Evalution Metrics"
+        "## Evaluation Metrics"
       ]
     },
     {
